--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   -o-background-size: cover;
   background-size: cover;
   min-height: 100vh;
+  height: 120%;
   max-width: 100vw;
   display: flex;
   flex-direction: column;
