--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Exo2.0-Thin';
+  font-family: "Exo2.0-Thin";
   src: url("./css__fonts/Exo2.0-Thin.otf") format("woff"),
     url("./css__fonts/Exo2.0-Thin.otf") format("truetype");
 }
@@ -9,13 +9,17 @@
 }
 
 .app {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 5e-05) 49.88%, rgba(0, 0, 0, 0.5) 100%),url(images/Background.png) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 5e-5) 49.88%,
+      rgba(0, 0, 0, 0.5) 100%
+    ),
+    url(images/Background.png);
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
   min-height: 100vh;
-  height: 120%;
+  height: 100%;
   max-width: 100vw;
   display: flex;
   flex-direction: column;
