--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -167,4 +167,4 @@
   position: absolute;
   z-index: 1;
   cursor: pointer;
-}/*# sourceMappingURL=Card.css.map */
+}/*# sourceMappingURL=card.css.map */
